2009-04-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.FindInFiles/FindInFilesDialog.cs: Fixed bug
	  in find in files dialog.

2009-04-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.FindInFiles/FindReplace.cs:
	* MonoDevelop.Ide.FindInFiles/FilterOptions.cs:
	* MonoDevelop.Ide.FindInFiles/SearchResultWidget.cs: Respect
	  case sensitive & search whole words only options.

2009-04-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.FindInFiles/FindReplace.cs:
	* MonoDevelop.Ide.FindInFiles/SearchResultWidget.cs: Now using
	  Boyer-Moore searching algorithm for pattern matching.

2009-04-23  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.Gui.Search:
	* MonoDevelop.Ide.Gui.Search/IFind.cs:
	* MonoDevelop.Ide.FindInFiles/Scope.cs:
	* MonoDevelop.Ide.Gui/ProgressMonitors.cs:
	* MonoDevelop.Ide.FindInFiles/Commands.cs:
	* MonoDevelop.Ide.Gui.Search/DefaultFind.cs:
	* MonoDevelop.Ide.Commands/SearchCommands.cs:
	* MonoDevelop.Ide.Gui.Search/SearchResult.cs:
	* MonoDevelop.Ide.FindInFiles/FindReplace.cs:
	* MonoDevelop.Ide.Gui.Search/ITextIterator.cs:
	* gtk-gui/MonoDevelop.Ide.DocumentSwitcher.cs:
	* MonoDevelop.Ide.Gui.Pads/SearchResultPad.cs:
	* MonoDevelop.Ide.FindInFiles/FileProvider.cs:
	* MonoDevelop.Ide.Gui.Search/SearchOptions.cs:
	* MonoDevelop.Ide.FindInFiles/SearchResult.cs:
	* MonoDevelop.Ide.FindInFiles/FilterOptions.cs:
	* MonoDevelop.Ide.Gui.Search/ISearchStrategy.cs:
	* MonoDevelop.Ide.Commands/RefactoryCommands.cs:
	* MonoDevelop.Ide.FindInFiles/SearchResultPad.cs:
	* MonoDevelop.Ide.Gui.Search/IDocumentIterator.cs:
	* MonoDevelop.Ide.Gui.Search/KMPSearchStrategy.cs:
	* MonoDevelop.Ide.FindInFiles/FindInFilesDialog.cs:
	* MonoDevelop.Ide.Gui.Search/RegExSearchStrategy.cs:
	* MonoDevelop.Ide.Gui.Search/DefaultSearchResult.cs:
	* MonoDevelop.Ide.FindInFiles/SearchResultWidget.cs: