@@ -1,5 +1,12 @@
 2009-04-23  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.Ide.FindInFiles/FindReplace.cs:
+	* MonoDevelop.Ide.FindInFiles/FindInFilesDialog.cs: Replaced
+	  search algorithm implementation (The old one didn't work as
+	  expected). FileMask is now preserved.
+
+2009-04-23  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.Ide.FindInFiles/FindInFilesDialog.cs: Fixed bug
 	  in find in files dialog.
 
